<resources>
    <string name="app_name">Interval Timer</string>
    <string name="notification_channel">default.channel</string>
    <string name="notification_rewind_action">REWIND</string>
    <string name="notification_pause_action">PAUSE</string>
    <string name="notification_fast_forward_action">FAST FORWARD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_interval_title">Add Interval</string>
    <string name="submit">Submit</string>
    <string name="add_interval_cancel_dialog_text">Cancel</string>
    <string name="add_interval_add_dialog_text">Add</string>
    <string name="add_interval_reps_toggle_text">Reps</string>
    <string name="add_interval_timer_toggle_text">Timer</string>
    <string name="add_interval_timers_reps_toggle_button">RepsTimerToggleButton</string>
    <string name="add_interval_name_hint_text">Interval Name</string>
    <string name="add_interval_active_text">Active</string>
    <string name="add_interval_resting_text">Resting</string>
    <string name="interval_name_empty_error">Please enter in an Interval Name</string>
    <string name="interval_reps_empty_error">Please enter the number of reps you want</string>
    <string name="interval_timer_empty_error">Please enter a duration for the interval</string>
    <string name="interval_second_unit">Sec</string>
    <string name="interval_unit_minutes">Min</string>
    <string name="add_interval_checkbox_text">Custom Interval Color</string>
    <string name="color_picker_box_desc">Interval Color Picker</string>
    <string name="interval_name_input_desc">Input for the Interval name</string>
    <string name="interval_timer_unit_toggle_button_label">Toggle Button for Timer Units</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="place_holder_title">Workout Name</string>
    <string name="end_workout">End Workout</string>
    <string name="number_reps"># of reps</string>
    <string name="defalut_timer_text">00:00</string>
    <string name="more">More</string>
    <string name="start">Start</string>
    <string name="workout_name_hint">Workout Name</string>
    <string name="add_workout_title">Add Workout</string>
    <string name="edit_workout_title">Edit Workout</string>
    <string name="edit_workout_positive_button_text">Save</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="edit_interval_modal_title_text">Edit Interval</string>
    <string name="workout_zero_state_text">Click the plus button to add a workout</string>
    <string name="interval_zero_state_text">Click the plus button to add an interval</string>
    <string name="timer_activity_title">Timer</string>
</resources>
